--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-psycopg2-binary==2.9.4
+asgiref==3.5.2
+cfgv==3.3.1
+distlib==0.3.6
+Django==4.1.3
+filelock==3.8.0
+identify==2.5.8
+nodeenv==1.7.0
+platformdirs==2.5.2
 pre-commit==2.20.0
+psycopg2-binary==2.9.4
+PyYAML==6.0
+sqlparse==0.4.3
+toml==0.10.2
+virtualenv==20.16.6
