--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
 cfgv==3.3.1
+dateparser==1.1.2
 distlib==0.3.6
 Django==4.1.3
 filelock==3.8.0
@@ -8,7 +9,14 @@ nodeenv==1.7.0
 platformdirs==2.5.2
 pre-commit==2.20.0
 psycopg2-binary==2.9.4
+python-dateutil==2.8.2
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
+regex==2022.3.2
+six==1.16.0
 sqlparse==0.4.3
 toml==0.10.2
+tzdata==2022.6
+tzlocal==4.2
 virtualenv==20.16.6
