--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,3 +18,15 @@ repos:
     hooks:
         -   id: black
             language: system
+
+# NOTE: Django templates are not strictly HTML files, and are therefore
+# tricky to format in a clean and consistent way. djlint will attempt to
+# reformat and check for compliance with HTML/Django template best practices
+# (see more about formatting and linting in the documentation here
+# https://www.djlint.com/docs/configuration/). djlint can be configured to desired
+# specifications using the .djlintrc file.
+-   repo: https://github.com/Riverside-Healthcare/djLint
+    rev: v1.19.16
+    hooks:
+        -   id: djlint-django
+            entry: djlint --profile=django --reformat --lint
